test/crlf.swark.err
SyntaxError: "\r" is not a valid character on line 1
