test/crlf.swark
prints "I'm using ms-dos line endings"
prints "because I'm stupid."
